tests/paczka1/fuzzy1/93253181.err
Error in line 1: rsyGF A308 35,1
Error in line 3: BRxcvBp5Z A671 82,4
Error in line 20: iSDZl A308 71,4
Error in line 14: BRxcvBp5Z A308 40,7
Error in line 16: aDLIMp7v S450 346,6
Error in line 18: SFJMBDgM38 A671 130,1
Error in line 35: aDLIMp7v A433 94,5
Error in line 37: aDLIMp7v S450 85,1
